<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enableTwitter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emotionbackground"
    tools:context=".SettingsActivity" >

    <View
        android:id="@+id/LineDatabase"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ContactsText"
        android:background="@color/White" />

    <TextView
        android:id="@+id/firstnamefirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/firstNameFirstButton"
        android:layout_marginLeft="14dp"
        android:text="@string/settings_firstname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <CheckBox
        android:id="@+id/firstNameFirstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LineDatabase"
        android:layout_marginTop="17dp" />

    <View
        android:id="@+id/LineContacts"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/DatabaseText"
        android:background="@color/White" />

    <Button
        android:id="@+id/clearDatabaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cleardatabase"
        android:layout_alignBottom="@+id/cleardatabase"
        android:layout_alignParentRight="true"
        android:textColor="@color/White"
        android:text="@string/settings_cleardatabasebutton" />

    <TextView
        android:id="@+id/cleardatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstnamefirst"
        android:layout_below="@+id/LineContacts"
        android:layout_marginTop="19dp"
        android:text="@string/settings_cleardatabase"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/ContactsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstnamefirst"
        android:layout_alignParentTop="true"
        android:text="@string/settings_contacts"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/DatabaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cleardatabase"
        android:layout_below="@+id/firstNameFirstButton"
        android:layout_marginTop="20dp"
        android:text="@string/settings_database"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cleardatabase"
        android:layout_centerVertical="true"
        android:text="@string/settings_social"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <View
        android:id="@+id/View01"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:background="@color/White" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/View01"
        android:layout_marginTop="20dp"
        android:text="@string/settings_twitter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <CheckBox
        android:id="@+id/enableTwitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView02" />

</RelativeLayout>